// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NewExplorerLink.vue > Should display a new link form 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col v-col-4">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--center-affix v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-0">
                <!---->URL *
              </label>
              <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" small="" class="v-field__input">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                  <!---->URL *
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div class="v-input__details">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
    </div>
    <div class="v-col v-col-4">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--center-affix v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-2">
                <!---->Name *
              </label>
              <!----><input size="1" type="text" id="input-2" aria-describedby="input-2-messages" small="" class="v-field__input">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
                  <!---->Name *
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div class="v-input__details">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-2-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
    </div>
    <div class="v-col v-col-4">
      <v-autocomplete-stub small="" variant="outlined" density="compact" label="Icon" items="" loading="false" item-title="name" item-value="function () { [native code] }" auto-select-first="" persistent-hint="" hide-no-data="" no-filter=""></v-autocomplete-stub>
    </div>
  </div>
</div>"
`;

exports[`NewExplorerLink.vue > Should display an existing link form 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col v-col-4">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-0">
                <!---->URL *
              </label>
              <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" small="" class="v-field__input" value="http://twitter.com">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                  <!---->URL *
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div class="v-input__details">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
    </div>
    <div class="v-col v-col-4">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-2">
                <!---->Name *
              </label>
              <!----><input size="1" type="text" id="input-2" aria-describedby="input-2-messages" small="" class="v-field__input" value="twitter">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
                  <!---->Name *
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div class="v-input__details">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-2-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
    </div>
    <div class="v-col v-col-4">
      <v-autocomplete-stub small="" variant="outlined" density="compact" label="Icon" items="" loading="false" item-title="name" item-value="function () { [native code] }" auto-select-first="" persistent-hint="" hide-no-data="" no-filter="" modelvalue="mdi-twitter"></v-autocomplete-stub>
    </div>
  </div>
</div>"
`;
